<resources>
    <string name="app_name">Bus</string>
    <string name="google_map_id">AIzaSyD76bEtE71M7PRUI8efr-3S69m3rfS867c</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ic_activity_help_heading">Help</string>

    <string-array name="stops">
        <item>Adrar</item>
        <item>Chlef</item>
        <item>Batna</item>
        <item>Béjaïa</item>
        <item>Alger</item>
        <item>Adrar</item>
        <item>Chlef</item>
        <item>Batna</item>
        <item>Béjaïa</item>
        <item>Alger</item>
    </string-array>

    <string-array name="job_titles">
        <item>Low Price</item>
        <item>Low Duration</item>
        <item>Baggage</item>
        <item>Time</item>
    </string-array>

    <string name="skip"><![CDATA[
<u>Skip</u>
    ]]></string>
    <string name="forget_password"><![CDATA[
<u>Forget Password!‬</u>
    ]]></string>

    <string name="ic_bottom_nav_bus_reservation">Home</string>
    <string name="ic_bottom_nav_bus_ticket">Ticket</string>
    <string name="ic_bottom_nav_bus_info">Stops</string>
    <string name="ic_bottom_nav_bus_help">More</string>
    <string name="home">Home</string>
    <string name="switch_to_user">Switch To User</string>
    <string name="profile">Profile</string>
    <string name="customer_feedback">Feedback</string>
    <string name="my_wallet">Payment</string>
    <string name="share">Share</string>
    <string name="logout">logout</string>
    <string name="enable_gps_message">Please enable GPS in high accuracy mode to get your location</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="ic_main_category_list_bus_between_city">Trip</string>
    <string name="ic_main_category_list_bus_within_city">Urbain</string>
    <string name="ic_main_category_list_hotel">Hotel</string>
    <string name="ic_main_category_list_restaurant">Resto</string>
    <string name="ic_main_category_list_car_rental">Rent</string>
    <string name="ic_main_category_list_repairing">Repair</string>
    <string name="ic_main_category_list_hand_man_power">ManPower</string>
    <string name="ic_main_category_list_hospital">Doctor</string>
    <string name="ic_main_category_list_transport_goods">Transport</string>
    <string name="ic_main_category_list_car_repair">Cars Sales</string>
    <string name="ic_main_category_list_taxi">Taxi City</string>


    <string name="ic_main_frag_bus_4_heading_heading">Help Centre</string>
    <string name="ic_main_frag_bus_4_heading_content">For Any query or suggestion call or message us.
We are always ready to help you.</string>
    <string name="ic_main_frag_bus_4_call_heading">Call Us</string>
    <string name="ic_main_frag_bus_4_call_message">In case of any query call us.</string>
    <string name="ic_main_frag_bus_4_message_heading">Message Us</string>
    <string name="ic_main_frag_bus_4_message_message">In case of any query Message us.</string>

    <!--main dialog_help.xml-->
    <string name="dialog_help_email_hint_text">Email</string>
    <string name="dialog_help_heading_hint_text">Heading</string>
    <string name="dialog_help_message_hint_text">Message</string>
    <string name="dialog_help_button_send_text">Send</string>


    <!--food bottom navigation bar-->
    <string name="ic_bottom_nav_food_main">Restaurant</string>
    <string name="ic_bottom_nav_food_order">Order</string>
    <string name="ic_bottom_nav_food_pick_up">Pick Up</string>
    <string name="ic_bottom_nav_food_help">Help</string>
    <string name="title_activity_terms">TermsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">About App</string>
    <string name="faq">FAQ</string>
    <string name="seats">Seats</string>
    <string name="booked_seats">Booked Seats</string>
    <string name="selected_seats">Selected Seats</string>
    <string name="empty_seats">Empty Seats</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="no_of_ticket">No of Ticket</string>
    <string name="total_price">Total Price</string>
    <string name="book">Book</string>
    <string name="_120">120 $</string>
    <string name="_1">1</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="free_rides">Free Rides</string>
    <string name="get_free_rides">Get Free Rides</string>
    <string name="who_says_no_to_free_trips">Who says no to free trips?</string>
    <string name="give_and_get">Give and get 20 DZD when your friends take their first ride.</string>
    <string name="mohamedf8fs9">MOHAMEDF8FS9</string>
    <string name="notifications">Notification</string>
    <string name="payment_method">Payment Methods</string>
    <string name="how_would_you_like_to_pay">How would you like to pay?</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="e_wallet">E Wallet</string>
    <string name="cib">CIB</string>
    <string name="e_cccp">E-CCCP</string>
    <string name="travel_summery">TRAVEL SUMMERY</string>
    <string name="south_">South Croydon to London, Tuesday, 4th Dec London Travel at 6:00 PM</string>
    <string name="_1_person_traveling">1 Person Traveling</string>
    <string name="total_fare">Total Fare</string>
    <string name="_120_00">120.00 $</string>
    <string name="pay_now">Pay Now</string>
    <string name="golden_member">Golden Member</string>
    <string name="mohamed">Mohamed</string>
    <string name="_1234567890">1234567890</string>
    <string name="egypt_cairo_denshway">Egypt, Cairo, Denshway</string>
    <string name="mohamedsmile999_gmaile_com">mohamedsmile999@gmaile.com</string>
    <string name="reservation">Reservation</string>
    <string name="bus_station">Bus Station</string>
    <string name="res_details">Reservation Details</string>
    <string name="confirmed_date_sat_4th_december_2018">Confirmed date : Sat, 4th December 2018</string>
    <string name="from">From :</string>
    <string name="south_croydon">South Croydon</string>
    <string name="to">To :</string>
    <string name="london">London</string>
    <string name="bus_name">Bus Name</string>
    <string name="boarding_time">Boarding Time</string>
    <string name="london_travel">London Travel</string>
    <string name="_05_45_am">05:45 AM</string>
    <string name="ticket_id">Ticket ID</string>
    <string name="seat_no">Seat No</string>
    <string name="lan87540876">LAN87540876</string>
    <string name="_10">10</string>
    <string name="members">Members</string>
    <string name="price">Price</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="no_filter">No Filter</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="ex_john_gmail_com">ex:John@gmail.com</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_have_read_and_accept_the_terms_amp_conditions"><![CDATA[i have read and accept the terms & conditions]]></string>
    <string name="i_have_read_and_accept_the_privacy_policy">i have read and accept the privacy policy</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_in">Sign IN</string>
    <string name="terms">Terms</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="mmohamed_khaled">MMohamed Khaled</string>
    <string name="how_was_your_trip_with_driver_name">How was your trip with Driver Name?</string>
    <string name="toyota_hiace_8613">Toyota Hiace 8613</string>
    <string name="smart_village_it_synergy">Smart Village It Synergy</string>
    <string name="al_fardous_city">AL Fardous City</string>
    <string name="_10_06_2019">10/06/2019</string>
    <string name="_07_24_am">07:24 AM</string>
    <string name="arrival">Arrival</string>
    <string name="_07_44_am">07:44 AM</string>
    <string name="line">Line</string>
    <string name="s730">S730</string>
    <string name="cash">Cash</string>
    <string name="_35_dzd">35 DZD</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="promotion">Promotion</string>
    <string name="_15">-15</string>
    <string name="credit">Credit</string>
    <string name="my_ticket">My Ticket</string>
    <string name="driver_name">Driver Name</string>
    <string name="trip_status">Trip Status</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="dont_received_the_code">Dont received the code?</string>
    <string name="send_code">Send Code</string>


</resources>
