<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp"
        android:orientation="vertical"
        tools:context=".view.activity.TicketDetailsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/man"
                android:id="@+id/driver_image"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mmohamed_khaled"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black_color"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/driver_image"
                android:id="@+id/driver_name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toyota_hiace_8613"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toEndOf="@+id/driver_image"
                android:id="@+id/car_type_number"
                android:layout_below="@+id/driver_name"
                />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#ccc"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_your_trip_with_driver_name"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_color"
            />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray_color"
            android:layout_marginTop="@dimen/_15sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="@dimen/_2sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/sign_in_bg"
                android:layout_marginEnd="@dimen/_10sdp"
                >

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smart_village_it_synergy"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black_color"
                    android:id="@+id/trip_from"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/al_fardous_city"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black_color"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/trip_to"
                    android:layout_below="@id/trip_from"
                    />


            </RelativeLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/reservation_bg_border"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_06_2019"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                android:layout_alignParentStart="true"
                android:id="@+id/start_date"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_07_24_am"
                android:textColor="#000"
                android:textSize="@dimen/_12ssp"
                android:layout_alignParentStart="true"
                android:id="@+id/start_time"
                android:layout_below="@+id/start_date"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrival"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                android:id="@+id/end_date"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_07_44_am"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black_color"
                android:id="@+id/end_time"
                android:layout_below="@+id/end_date"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_alignParentEnd="true"
                android:id="@+id/line"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s730"
                android:textColor="@color/black_color"
                android:textSize="@dimen/_12ssp"
                android:layout_alignParentEnd="true"
                android:id="@+id/line_number"
                android:layout_below="@+id/end_date"
                />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray_color"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textStyle="bold"
                android:id="@+id/cash"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_35_dzd"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black_color"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/cash_value"
                android:layout_below="@+id/cash"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_seats"
                android:id="@+id/seats"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:layout_gravity="center"
                    android:textColor="@color/black_color"
                    android:id="@+id/seats_number"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/seats"
                    android:layout_centerHorizontal="true"
                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promotion"
                android:id="@+id/promotion"
                android:layout_gravity="center"
                android:textColor="@color/black_color"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cash_value"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:layout_gravity="center"
                android:textColor="@color/black_color"
                android:id="@+id/promotion_value"
                android:textSize="@dimen/_14ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/seats_number"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:layout_gravity="center"
                android:textColor="@color/black_color"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/promotion"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-10"
                android:layout_gravity="center"
                android:textColor="@color/black_color"
                android:id="@+id/credit_value"
                android:textSize="@dimen/_14ssp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/promotion_value"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray_color"
            android:layout_marginTop="@dimen/_15sdp"
            />

    </LinearLayout>
</layout>